base/*: Set skip_missing_names_on_install=0 in /etc/yum.conf
Ensure yum install fails if a package is missing.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -11,8 +11,8 @@ RUN INSTALL_PKGS=" \
       which tar wget hostname sysvinit-tools util-linux \
       socat tree findutils lsof bind-utils shadow-utils \
       " && \
+    echo 'skip_missing_names_on_install=0' >> /etc/yum.conf && \
     yum install -y ${INSTALL_PKGS} && \
-    rpm -V ${INSTALL_PKGS} && \
     yum clean all && \
     mkdir -p /var/lib/origin
 
