--- a/base/Dockerfile.rhel
+++ b/base/Dockerfile.rhel
@@ -5,6 +5,7 @@ RUN INSTALL_PKGS=" \
       procps-ng rsync \
       " && \
     if [ ! -e /usr/bin/yum ]; then ln -s /usr/bin/microdnf /usr/bin/yum; fi && \
+    echo 'skip_missing_names_on_install=0' >> /etc/yum.conf && \
     yum install -y --setopt=tsflags=nodocs ${INSTALL_PKGS} && \
     yum clean all && rm -rf /var/cache/*
 LABEL io.k8s.display-name="OpenShift Base" \
