--- a/pod/Dockerfile.rhel
+++ b/pod/Dockerfile.rhel
@@ -1,7 +1,7 @@
-FROM registry.ci.openshift.org/ocp/builder:rhel-8-golang-1.15-openshift-4.8 AS builder
+FROM registry.ci.openshift.org/ocp/builder:rhel-8-golang-1.16-openshift-4.8 AS builder
 WORKDIR /go/src/github.com/openshift/images
 COPY . .
-RUN CGO_ENABLED=0 go build -installsuffix=cgo -o pod/bin/pod ./pod
+RUN CGO_ENABLED=0 GO111MODULE=off go build -installsuffix=cgo -o pod/bin/pod ./pod
 
 FROM registry.ci.openshift.org/ocp/4.8:base
 COPY --from=builder /go/src/github.com/openshift/images/pod/bin/pod /usr/bin/
