--- a/base/Dockerfile.rhel9
+++ b/base/Dockerfile.rhel9
@@ -12,7 +12,8 @@ RUN INSTALL_PKGS=" \
       procps-ng rsync iproute diffutils python3 \
       python-unversioned-command util-linux dbus systemd" && \
     echo 'skip_missing_names_on_install=0' >> /etc/yum.conf && \
-    dnf install -y --nodocs --setopt=install_weak_deps=False ${INSTALL_PKGS} && \
+    echo 'install_weak_deps=0' >> /etc/yum.conf && \
+    dnf install -y --nodocs ${INSTALL_PKGS} && \
     dnf clean all && rm -rf /var/cache/*
 
 # OKD-specific changes
